sonar check