@@ -12,7 +12,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class VocabularyService {
@@ -30,7 +29,7 @@ public class VocabularyService {
         List<VocabularyDto> vocalbularies = vocabularyRepository.findAll()
                 .stream()
                 .map(e -> new VocabularyDto(e.getEn(), e.getJp(), e.getKr()))
-                .collect(Collectors.toList());
+                .toList();
         return new VocaSearchResponseDto(Result.SUCCESS, vocalbularies);
     }
 
